--- a/RxAnimation/app/build.gradle
+++ b/RxAnimation/app/build.gradle
@@ -20,8 +20,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
     compile 'com.android.support:appcompat-v7:25.0.1'
+    compile project(':library')
 }
